Adding A simple implementation of WebPage Controller
