# Application/src/main/resources/swagger.yaml
@@ -1,85 +1,90 @@
-openapi: 3.0.1
+swagger: "2.0"
 info:
   title: Discount Hunter API
-  description: This is a specification for Discount Hunter API which allows to control whichweb pages
-  are monitored for changing prices.
+  description: "This is a specification for Discount Hunter API which allows to control whichweb pages
+  are monitored for changing prices."
   version: 1.0.0
-servers:
-  - url: 'https://localhost:8080'
+host: "localhost:8080"
+basePath: /
+tags:
+  - name: "Web Pages"
+    description: "Everything about Web Pages in the system"
+schemes:
+  - http
 paths:
-  /webpages/{id}:
+  /webPages/{id}:
     get:
-      tags:
-        - "Web Pages"
-      summary: Retrieve existing web page information along with its price details
-      description: ""
+      summary: "Retrieve existing web page information along with its price details"
       operationId: "getWebPage"
+      produces:
+        - application/json
       parameters:
         - in: "path"
           name: "id"
           description: "Id of webpage to be retrieved"
           required: true
-          schema:
-            type: integer
-            format: int32
+          type: integer
+          format: int64
       responses:
         '200':
           description: "OK"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/WebPageDto'
-  /webpages:
+          schema:
+            $ref: '#/definitions/WebPageDto'
+  /webPages:
     post:
-      tags:
-        - "Web Pages"
       summary: "Add a new web page to web page collection"
       operationId: "addWebPage"
+      produces:
+        - application/json
       parameters:
         - in: "body"
           name: "WebPageDto"
           description: "Web Page Object that should be added"
           required: true
           schema:
-            $ref: '#/components/schemas/WebPageDto'
+            $ref: '#/definitions/WebPageDto'
       responses:
         201:
           description: "Web Page Created"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/WebPageDto'
-  /priceDetails/{id}:
+          schema:
+            $ref: '#/definitions/WebPageDto'
+  /priceDetails/{webPageId}:
     get:
       summary: "Get all price details for specific web page"
       operationId: "getPriceDetails"
+      produces:
+        - application/json
       parameters:
         - in: "path"
           name: "webPageId"
           required: true
-          schema:
-            type: integer
-            format: int32
+          type: integer
+          format: int32
       responses:
         200:
           description: "Price details retrieved successfully"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/WebPagePriceDetailsDto'
-components:
-  schemas:
-    WebPageDto:
-      type: object
-      required:
-        - url
-      properties:
-        url:
-          type: string
-    WebPagePriceDetailsDto:
-      type: object
-      properties:
-        pageId:
-          type: integer
-        price:
-          type: integer
+          schema:
+            $ref: '#/definitions/WebPagePriceDetailsDto'
+definitions:
+  WebPageDto:
+    type: object
+    required:
+      - url
+    properties:
+      id:
+        type: integer
+        format: int64
+      url:
+        type: string
+    xml:
+      name: DoctorDto
+  WebPagePriceDetailsDto:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+      pageId:
+        type: integer
+      price:
+        type: number
